# TelegramFileServer

./: .env.example  .gitignore  .gitmodules  CONSTITUTION.md  Dockerfile  LICENSE  PROJECT_COMPLETION_SUMMARY.md  README.md  ROADMAP.md  Serandip-Prime.session  __main__.py  app.json  heroku.yml  install.sh  read_bot_py.py  read_log.py  read_log_chunk.py  read_log_flat.py  requirements.txt  test_import.py  traceback.txt  traceback_main.txt
.github/workflows/: build-windows-app.yml  tauri-build.yml
.qoder/commands/: new.md  releasenote.md  speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.new.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.qoder/rules/: Just-Asnwer.md  No-Run.md  runorbuild.md
.specify/memory/: constitution.md
plans/001-telegram-file-server/: plan.md
releaseNotes/: v1.0.0.md
specs/002-modern-ui-design/: spec.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/Frontend/: README.md  index.html  package-lock.json  package.json
src-tauri/Frontend/src/: App.tsx  main.tsx
src-tauri/Frontend/src/components/: AuthWrapper.tsx  BackendUrlUpdater.tsx  ContextMenu.tsx  DeleteConfirmDialog.tsx  DeleteDialog.tsx  NewFolderDialog.tsx  RenameInput.tsx  Thumbnail.tsx  TopBar.tsx
src-tauri/Frontend/src/hooks/: useFileOperations.tsx  useFiles.ts
src-tauri/Frontend/src/lib/: api.ts
src-tauri/Frontend/src/pages/: Index.tsx
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: README.md  test_multi_user_access.py  test_web_endpoints.py
(+86 files in other folders)
