[package]
name = "telegram-file-server"
version = "0.1.0"
description = "A Telegram Base Cloud Storage"
authors = ["pamod_madubashana"]
license = ""
repository = ""
edition = "2025"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]