[package]
name = "telegram-file-server"
version = "0.1.0"
description = "A Telegram Base Cloud Storage"
authors = ["pamod_madubashana"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-devtools = "2.0.0"
env_logger = "0.10.0"
log = "0.4.14"
chrono = { version = "0.4.23", features = ["clock"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]